--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ BONJOUR
 </head>
 <body>
 
-<H1>VOICI LE ZOO DE CIEL2</H1>
+<center></center><H1>VOICI LE ZOO DE CIEL2</H1>
   < img src="/zoo" >
 </body>
 
