--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ BONJOUR
 <body>
 
 <center></center><H1>VOICI LE ZOO DE CIEL2</H1>
-  < img src="/zoo" >
+<img src="\zoo" alt="Logo HubSpot" width=30% height=30% title="Découvrez notre logo !"/>
 </body>
 
 
