--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ BONJOUR
 </head>
 <body>
 
-<center></center><H1>VOICI LE ZOO DE CIEL2</H1>
-<img src="\zoo" alt="Logo HubSpot" width=30% height=30% title="Découvrez notre logo !"/>
+<center><H1>VOICI LE ZOO DE CIEL2</H1></center>
+<img src="/zoo" alt="Logo HubSpot" width=30% height=30% title="Découvrez notre logo !"/>
 </body>
 
 
