--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ BONJOUR
 <body>
 
 <center><H1>VOICI LE ZOO DE CIEL2</H1></center>
-<img src="/zoo" alt="Logo HubSpot" width=30% height=30% title="Découvrez notre logo !"/>
+<img src="https://share.google/images/rzZaik6zYznRa4Uhl"/>
 </body>
 
 
