--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-BONJOUR
+BONJOUR,VOICI MA CLASSE
 </head>
 <body>
 
-<center><H1>VOICI LE ZOO DE CIEL2</H1></center>
+<center><H1>VOICI LA PHOTO DE CLASSE DES CIEL2</H1></center>
 <img src="C:\Users\alexp\Pictures\zoo"/>
+  
 </body>
 
 
