--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ BONJOUR,VOICI MA CLASSE
 <center><H1>VOICI LA PHOTO DE CLASSE DES CIEL2</H1></center>
 <img src="C:\Users\alexp\Pictures\zoo">
   <img src="https://images.unsplash.com/photo-1517849845537-4d257902454a?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" >
-  <img src="https://images.unsplash.com/photo-1517849845537-4d257902454a?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="pingouin">
+ <img src="https://fr.freepik.com/vecteurs-libre/groupe-animaux-sauvages-zoo-elements-nature-fond-blanc_11863244.htm#fromView=keyword&page=1&position=0&uuid=cf8158ff-513a-4cc0-8819-528a782ef67c&query=Dessin+zoo">
 
   
 </body>
