--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@ BONJOUR,VOICI MA CLASSE
 <body>
 
 <center><H1>VOICI LA PHOTO DE CLASSE DES CIEL2</H1></center>
-<img src="C:\Users\alexp\Pictures\zoo">
-  <img src="https://images.unsplash.com/photo-1517849845537-4d257902454a?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" >
- <img src="https://unsplash.com/photos/a-zebra-grazing-on-grass-in-a-field-HGQqoShKO6E">
+<img src="C:\Users\alexp\Pictures\zoo.jpg">
 
   
 </body>
