--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ BONJOUR,VOICI MA CLASSE
 <body>
 
 <center><H1>VOICI LA PHOTO DE CLASSE DES CIEL2</H1></center>
-<img src="C:\Users\alexp\Pictures\zoo.jpg">
+<img src="\zoo.jpg">
 
   
 </body>
