--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ BONJOUR,VOICI MA CLASSE
 
 <center><H1>VOICI LA PHOTO DE CLASSE DES CIEL2</H1></center>
 <img src="\zoo.jpg">
-
+<img src="/zoo.jpg">
   
 </body>
 
