--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ BONJOUR,VOICI MA CLASSE
 <center><H1>VOICI LA PHOTO DE CLASSE DES CIEL2</H1></center>
 <img src="\zoo.jpg">
 <img src="/zoo.jpg">
+  <img src="/zoo.jpeg">
+  <img src="\zoo.jpeg">
   
 </body>
 
