--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-BONJOUR,VOICI MA CLASSE
+  <meta charset="UTF-8">
+  <title>Photo de classe</title>
 </head>
 <body>
 
-<center><H1>VOICI LA PHOTO DE CLASSE DES CIEL2</H1></center>
-<img src="\zoo.jpg">
-<img src="/zoo.jpg">
-  <img src="/zoo.jpeg">
-  <img src="\zoo.jpeg">
-  
+  <center><h1>VOICI LA PHOTO DE CLASSE DES CIEL2</h1></center>
+  <img src="iamges/zoo.jpg" alt="Photo de classe CIEL2">
+
 </body>
-
-
-  
 </html>
