--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <center><h1>VOICI LA PHOTO DE CLASSE DES CIEL2</h1></center>
   <img src="images/zoo.jpg" alt="Photo de classe CIEL2">
-  <img src="/zoo.jpg" alt="Photo de classe CIEL2">
+  <img src="zoo.jpg" alt="Photo de classe CIEL2">
 
 </body>
 </html>
