--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
   <center><h1>VOICI LA PHOTO DE CLASSE DES CIEL2</h1></center>
  <center> <img src="zoo.jpg" alt="Photo de classe CIEL2" width=50% height=50%></center>
-
+<iframe id="widget_autocomplete_preview"  width="150" height="300" frameborder="0" src="https://meteofrance.com/widget/prevision/203510##03A9F4B3" title="Prévisions Villanova par Météo-France"> </iframe>
 </body>
 </html>
