--- a/contact.html
+++ b/contact.html
@@ -2,17 +2,17 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title><u> <H1>LES CONTACTS     </H1> </u></title>
+  <title><u> Contact Zoo </u></title>
 </head>
 <body>
-
-  <u>Adresse:</u>123 Chemin des Poissons, 20167 Villanova, Corse
+<center><H1>LES CONTACTS     </H1>
+  <u>Adresse:</u>123 Chemin des Poissons, 20167 Villanova, Corse <br>
   <u>Téléphone</u>
 <A HREF="https://alexsiam2a.github.io/CIEL2ZOO-html/"> retour à l'accueil </A>
 
 
 
-  
+  </center>
 </body>
 
 
