--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <body>
 <center><H1>LES CONTACTS     </H1>
   <u>Adresse:</u>123 Chemin des Poissons, 20167 Villanova, Corse <br>
-  <u>Téléphone</u>
+  <u>Téléphone:</u>+33 4 95 00 00 00
 <A HREF="https://alexsiam2a.github.io/CIEL2ZOO-html/"> retour à l'accueil </A>
 
 
