--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>LE ZOO DES CIEL2</title>
+  <title>AQUAZOO DES CIEL2</title>
 </head>
 <body>
-
-  <center><h1>VOICI LA PHOTO DE CLASSE DES CIEL2</h1></center>
- <center> <img src="zoo.jpg" alt="Photo de classe CIEL2" width=50% height=50%></center>
+	
+  <center><h1>Bienvenue à l'aquazoo des ciel2.</h1>
+  <br>Nous sommes situé vers le golfe de Lava entre terre et mer !</center>
+ <center> <img src="zoo.jpg" alt="Photo de classe CIEL2" width=30%></center>
  
 <iframe id="widget_autocomplete_preview"  width="150" height="300" frameborder="0" src="https://meteofrance.com/widget/prevision/203510##03A9F4B3" title="Prévisions Villanova par Météo-France"> </iframe>
  <H2>Voici l'emplacement du zoo:</H2>
   <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2659.258382708426!2d8.658677010094992!3d41.974184635159126!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sfr!2sfr!4v1758262262515!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 <A HREF="https://alexsiam2a.github.io/CIEL2ZOO-html/contact.html"> Comment nous contacter </A>
+<A HREF="https://alexsiam2a.github.io/CIEL2ZOO-html/visiter.html"> Visiter </A>
 
 </body>
 </html>
