--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
   <title>AQUAZOO DES CIEL2</title>
 </head>
 <body>
-	<header> <A HREF="https://alexsiam2a.github.io/CIEL2ZOO-html/contact.html"> Comment nous contacter </A>
-<A HREF="https://alexsiam2a.github.io/CIEL2ZOO-html/visiter.html"> Visiter </A>     </header>
+	<header>
+		<table>
+			<tr>
+				<td>
+					<A HREF="https://alexsiam2a.github.io/CIEL2ZOO-html/contact.html"> Comment nous contacter </A>
+				</td>
+				
+			
+			<td>
+				<A HREF="https://alexsiam2a.github.io/CIEL2ZOO-html/visiter.html"> Visiter </A>     
+			</td>
+</tr>
+	
+	</table>
+	</header>
+	
   <center><h1>Bienvenue à l'aquazoo des ciel2.</h1>
   <br>Nous sommes situé vers le golfe de Lava entre terre et mer !</center>
  <center> <img src="zoo.jpg" alt="Photo de classe CIEL2" width=30%></center>
