--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
 </head>
 <body>
 
-    <header><nav><ul>
-                <li><A HREF="https://alexsiam2a.github.io/CIEL2ZOO-html/contact.html"> Comment nous contacter </A></li>
-				<li><A HREF="https://alexsiam2a.github.io/CIEL2ZOO-html/visiter.html"> Visiter </A>     </li>
+<header>
+  <nav>
+    <ul style="list-style:none; display:flex; gap:15px; background:#cce5ff; padding:10px; border-radius:8px;">
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="visiter.html">Visiter</a></li>
+      <li><a href="acces.html">Accès</a></li>
+      <li><a href="tarifs.html">Tarifs</a></li>
+      <li><a href="activites.html">Activités</a></li>
+      <li><a href="fauves.html">Fauves</a></li>
+      <li><a href="photos.html">Photos</a></li>
+      <li><a href="manger.html">Manger</a></li>
+    </ul>
+  </nav>
+</header>
 
-
-        
-    </ul></nav></header>
 					
 	
 
