--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,22 @@
   <title><u> Contact Zoo </u></title>
 </head>
 <body>
+  <header>
+  <nav>
+    <ul style="list-style:none; display:flex; gap:15px; background:#cce5ff; padding:10px; border-radius:8px;">
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="visiter.html">Visiter</a></li>
+      <li><a href="acces.html">Accès</a></li>
+      <li><a href="tarifs.html">Tarifs</a></li>
+      <li><a href="activites.html">Activités</a></li>
+      <li><a href="fauves.html">Fauves</a></li>
+      <li><a href="photos.html">Photos</a></li>
+      <li><a href="manger.html">Manger</a></li>
+    </ul>
+  </nav>
+</header>
+
 <center><H1>LES CONTACTS     </H1>
   <u>Adresse:</u>123 Chemin des Poissons, 20167 Villanova, Corse <br>
   <u>Téléphone:</u>+33 4 95 00 00 00
