--- a/manger.html
+++ b/manger.html
@@ -5,6 +5,22 @@
   <title>Restauration</title>
 </head>
 <body>
+  <header>
+  <nav>
+    <ul style="list-style:none; display:flex; gap:15px; background:#cce5ff; padding:10px; border-radius:8px;">
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="visiter.html">Visiter</a></li>
+      <li><a href="acces.html">Accès</a></li>
+      <li><a href="tarifs.html">Tarifs</a></li>
+      <li><a href="activites.html">Activités</a></li>
+      <li><a href="fauves.html">Fauves</a></li>
+      <li><a href="photos.html">Photos</a></li>
+      <li><a href="manger.html">Manger</a></li>
+    </ul>
+  </nav>
+</header>
+
   <h1>Se restaurer au zoo</h1>
   <p>Plusieurs options de restauration sont disponibles :</p>
   <ul>
