--- a/photos.html
+++ b/photos.html
@@ -5,6 +5,22 @@
   <title>Album Photo</title>
 </head>
 <body>
+  <header>
+  <nav>
+    <ul style="list-style:none; display:flex; gap:15px; background:#cce5ff; padding:10px; border-radius:8px;">
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="visiter.html">Visiter</a></li>
+      <li><a href="acces.html">Accès</a></li>
+      <li><a href="tarifs.html">Tarifs</a></li>
+      <li><a href="activites.html">Activités</a></li>
+      <li><a href="fauves.html">Fauves</a></li>
+      <li><a href="photos.html">Photos</a></li>
+      <li><a href="manger.html">Manger</a></li>
+    </ul>
+  </nav>
+</header>
+
   <h1>Album photo du zoo</h1>
   <img src="zoo1.jpg" alt="Photo du zoo" width="250">
   <img src="zoo2.jpg" alt="Animaux" width="250">
