--- a/visiter.html
+++ b/visiter.html
@@ -5,9 +5,25 @@
   <title>AQUAZOO VISITER</title>
 </head>
 <body>
+  <header>
+  <nav>
+    <ul style="list-style:none; display:flex; gap:15px; background:#cce5ff; padding:10px; border-radius:8px;">
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="visiter.html">Visiter</a></li>
+      <li><a href="acces.html">Accès</a></li>
+      <li><a href="tarifs.html">Tarifs</a></li>
+      <li><a href="activites.html">Activités</a></li>
+      <li><a href="fauves.html">Fauves</a></li>
+      <li><a href="photos.html">Photos</a></li>
+      <li><a href="manger.html">Manger</a></li>
+    </ul>
+  </nav>
+</header>
 
 
-<A HREF="https://alexsiam2a.github.io/CIEL2ZOO-html/"> PAGE D'ACCEUIL	 </A>
+
 
 </body>
 </html>
+
