--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <header>
   <nav>
+	  <center>
     <ul style="list-style:none; display:flex; gap:15px; background:#cce5ff; padding:10px; border-radius:8px;">
       <li><a href="index.html">Accueil</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -19,6 +20,7 @@
       <li><a href="photos.html">Photos</a></li>
       <li><a href="manger.html">Manger</a></li>
     </ul>
+	  </center>
   </nav>
 </header>
 
