--- a/contact.html
+++ b/contact.html
@@ -5,21 +5,22 @@
   <title><u> Contact Zoo </u></title>
 </head>
 <body>
-  <header>
+<header>
   <nav>
-    <ul style="list-style:none; display:flex; gap:15px; background:#cce5ff; padding:10px; border-radius:8px;">
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="visiter.html">Visiter</a></li>
-      <li><a href="acces.html">Accès</a></li>
-      <li><a href="tarifs.html">Tarifs</a></li>
-      <li><a href="activites.html">Activités</a></li>
-      <li><a href="fauves.html">Fauves</a></li>
-      <li><a href="photos.html">Photos</a></li>
-      <li><a href="manger.html">Manger</a></li>
+    <ul style="list-style:none; display:flex; gap:20px; justify-content:center; background:#0077cc; padding:15px; border-radius:8px;">
+      <li><a href="index.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Accueil</a></li>
+      <li><a href="contact.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Contact</a></li>
+      <li><a href="visiter.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Visiter</a></li>
+      <li><a href="acces.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Accès</a></li>
+      <li><a href="tarifs.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Tarifs</a></li>
+      <li><a href="activites.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Activités</a></li>
+      <li><a href="fauves.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Fauves</a></li>
+      <li><a href="photos.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Photos</a></li>
+      <li><a href="manger.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Manger</a></li>
     </ul>
   </nav>
 </header>
+
 
 <center><H1>LES CONTACTS     </H1>
   <u>Adresse:</u>123 Chemin des Poissons, 20167 Villanova, Corse <br>
