--- a/activites.html
+++ b/activites.html
@@ -21,14 +21,14 @@
   </nav>
 </header>
 
-
+<center>
   <h1>Nos activités</h1>
-  <p>Venez découvrir les animations quotidiennes : nourrissage des lions, spectacle des otaries, visites guidées.</p>
+  <p>Venez découvrir les animations quotidiennes : nourrissage des lions, spectacle des otaries, visites guidées,toboglans.</p>
 
   <h2>Vidéo de présentation :</h2>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" 
+  <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/bvNtuyngL7A?si=QVgiwUeKRU0Z6ZtH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" 
     frameborder="0" allowfullscreen></iframe>
 
-  <p><a href="index.html">Retour à l'accueil</a></p>
+</center>
 </body>
 </html>
