--- a/activites.html
+++ b/activites.html
@@ -3,6 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Activités</title>
+
+  <meta charset="UTF-8">
+  <title>Mon Zoo</title>
+  <style>
+    body {
+      background-image: url('fondact.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      margin: 0;
+    }
+  </style>
+
+
 </head>
 <body>
 <header>
