--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>AQUAZOO</title>
+	<meta charset="UTF-8">
+  <title>Mon Zoo</title>
+  <style>
+    body {
+      background-image: url('aquazoo1.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
 
