--- a/activites.html
+++ b/activites.html
@@ -40,8 +40,7 @@
   <p>Venez découvrir les animations quotidiennes : nourrissage des lions, spectacle des otaries, visites guidées,toboglans,pêche nokill.</p>
 
   <h2>Vidéo de présentation du toboglands:</h2>
-  <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/bvNtuyngL7A?si=QVgiwUeKRU0Z6ZtH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" 
-    frameborder="0" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/bvNtuyngL7A?si=xz20AJRjbHwANpje" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <h2>Vidéo de présentation de la pêche no kill:</h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/EcBlpAD2puo?si=UTrB7xdVwK_edG3l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </center>
