--- a/index.html
+++ b/index.html
@@ -47,8 +47,17 @@
            border-radius:10px; 
            box-shadow:2px 2px 8px rgba(0,0,0,0.2);">
 	  Bienvenue à l'Aquazoo des ciel2 <br>
-  ☀️ Voici la météo d’aujourd’hui ☁️
-</h2>
+  </h2 >
+	<h3style="text-align:center; 
+           color:#0077cc; 
+           font-family:Arial, sans-serif; 
+           font-size:28px; 
+           background:#e6f2ff; 
+           padding:12px; 
+           border-radius:10px; 
+           box-shadow:2px 2px 8px rgba(0,0,0,0.2);">	
+		  ☀️ Voici la météo d’aujourd’hui ☁️
+	</h3>
 
  
 <iframe id="widget_autocomplete_preview"  width="150" height="300" frameborder="0" src="https://meteofrance.com/widget/prevision/203510##03A9F4B3" title="Prévisions Villanova par Météo-France"> </iframe>
