--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>AQUAZOO</title>
-	<meta charset="UTF-8">
-  <title>Mon Zoo</title>
   <style>
     body {
       background-image: url('aquazoo1.jpg');
@@ -52,15 +50,15 @@
            color:#0077cc; 
            font-family:Arial, sans-serif; 
            font-size:28px; 
-           background:#e6f2ff; 
+           background:#fff700; 
            padding:12px; 
            border-radius:10px; 
            box-shadow:2px 2px 8px rgba(0,0,0,0.2);">	
-		  ☀️ Voici la météo d’aujourd’hui ☁️
+		  ☀️ Voici la météo d’aujourd’hui à Villanova☁️
 	</h3>
 
- 
-<iframe id="widget_autocomplete_preview"  width="150" height="300" frameborder="0" src="https://meteofrance.com/widget/prevision/203510##03A9F4B3" title="Prévisions Villanova par Météo-France"> </iframe>
- 
+ <CENTER>
+<iframe id="widget_autocomplete_preview"  width="450" height="900" frameborder="0" src="https://meteofrance.com/widget/prevision/203510##03A9F4B3" title="Prévisions Villanova par Météo-France"> </iframe>
+ </CENTER>
 </body>
 </html>
