--- a/index.html
+++ b/index.html
@@ -3,15 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>AQUAZOO</title>
-  <style>
-    body {
-      background-image: url('aquazoo1.jpg');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      margin: 0;
-    }
-  </style>
 </head>
 <body>
 
@@ -58,7 +49,8 @@
 	</h3>
 
  <CENTER>
-<iframe id="widget_autocomplete_preview"  width="450" height="900" frameborder="0" src="https://meteofrance.com/widget/prevision/203510##03A9F4B3" title="Prévisions Villanova par Météo-France"> </iframe>
+<iframe id="widget_autocomplete_preview"  width="450" height="450" frameborder="0" src="https://meteofrance.com/widget/prevision/203510##03A9F4B3" title="Prévisions Villanova par Météo-France"> </iframe>
+	 <img src="aquazoo1.jpg" />
  </CENTER>
 </body>
 </html>
