--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
  <CENTER>
 <iframe id="widget_autocomplete_preview"  width="450" height="450" frameborder="0" src="https://meteofrance.com/widget/prevision/203510##03A9F4B3" title="Prévisions Villanova par Météo-France"> </iframe>
-	 <img src="aquazoo1.jpg" />
+	 <img src="aquazzoo1.jpg" />
  </CENTER>
 </body>
 </html>
