--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>AQUAZOO</title>
+  <style>
+    body {
+      background-image: url('aquazzo1.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
 
