--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>AQUAZOO</title>
  
 </head>
-<body style="background-image: url('zoo.jpg'); 
+<body style="background-image: url('aquazzoo1.jpg'); 
              background-size: contain; 
              background-repeat: no-repeat; 
              background-position: center; 
@@ -57,7 +57,7 @@
 
  <CENTER>
 <iframe id="widget_autocomplete_preview"  width="450" height="450" frameborder="0" src="https://meteofrance.com/widget/prevision/203510##03A9F4B3" title="Prévisions Villanova par Météo-France"> </iframe>
-	 <img src="aquazzoo1.jpg" />
+
  </CENTER>
 </body>
 </html>
