--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>AQUAZOO</title>
- <body style="background-image: url('aquazzoo1.jpg'); 
-             background-size: contain; 
-             background-repeat: no-repeat; 
-             background-position: center; 
-             background-color: #f0f8ff; 
-             margin:0;">
+ 
 </head>
 
+<>
 
 
 <header>
@@ -57,7 +53,9 @@
 
  <CENTER>
 <iframe id="widget_autocomplete_preview"  width="450" height="450" frameborder="0" src="https://meteofrance.com/widget/prevision/203510##03A9F4B3" title="Prévisions Villanova par Météo-France"> </iframe>
-
+	
+	<img src="aquazzo1.jpg"/ width=20%>
+	
  </CENTER>
 </body>
 </html>
