--- a/visiter.html
+++ b/visiter.html
@@ -20,12 +20,14 @@
     </ul>
   </nav>
 </header>
-
+<H2>Voici notre bateau semi-rigide pour visiter le golfe:</H2>
+  <img src="bato.jpg"/>
 
 
 
 
 </body>
 </html>
+
 
 
