--- a/fauves.html
+++ b/fauves.html
@@ -25,13 +25,16 @@
   <h1>Nos fauves</h1>
   <p>Découvrez les rois de la savane et de la jungle :</p>
   <ul>
-    <li><b>Lions</b> – le roi des animaux</li>
-    <li><b>Tigres</b> – puissants félins d’Asie</li>
-    <li><b>Panthères</b> – mystérieuses et agiles</li>
+    <li><b>Lions</b> – le roi des animaux(d'où l'expression "OHHHHH! LIONNNN"!)</li>
+    <li><b>Tigres</b> – puissants félins d’Asie(d'où l'expression"tié un TIGREEE!"</li>
+    <li><b>Guépards</b> – Le plus rapide de la savanne</li>
+    <li><b>Lynx</b> – "T'y a des yeux lynxxxx!"</li>
   </ul>
   <img src="lion.jpg" alt="Lion" width="200">
   <img src="tigre.jpg" alt="Tigre" width="200">
+  <img src="guepard.jpg" alt="Tigre" width="200">
+  <img src="lynx.jpg" alt="Tigre" width="200">
 
-  <p><a href="index.html">Retour à l'accueil</a></p>
+
 </body>
 </html>
