--- a/fauves.html
+++ b/fauves.html
@@ -25,18 +25,23 @@
   <h1>Nos fauves</h1>
   <p>Découvrez les rois de la savane et de la jungle :</p>
   <ul><h3>
-    
+    <table>
+      <tr>
+    <td><li><b>Lions</b> – le roi des animaux(d'où l'expression "OHHHHH! LIONNNN"!)</li>  </td>
+        <td> <img src="lion.jpg" alt="Lion" width="200"></td>
+      </tr>
+   
  
-    <li><b>Lions</b> – le roi des animaux(d'où l'expression "OHHHHH! LIONNNN"!)</li>
+    
     <li><b>Tigres</b> – puissants félins d’Asie(d'où l'expression"tié un TIGREEE!"</li>
     <li><b>Guépards</b> – Le plus rapide de la savanne</li>
     <li><b>Lynx</b> – "T'y a des yeux lynxxxx!"</li>
    </h3></ul>
-  <img src="lion.jpg" alt="Lion" width="200">
+ 
   <img src="tigre.jpg" alt="Tigre" width="200">
   <img src="guepard.jpg" alt="Tigre" width="200">
   <img src="lynx.jpg" alt="Tigre" width="200">
-
+ </table>
 
 </body>
 </html>
