--- a/fauves.html
+++ b/fauves.html
@@ -25,22 +25,22 @@
   <h1>Nos fauves</h1>
   <p>Découvrez les rois de la savane et de la jungle :</p>
   <ul><h3>
-    <table border =10>
+    <table border=2>
       <tr>
     <td><li><b>Lions</b> – le roi des animaux(d'où l'expression "OHHHHH! LIONNNN"!)</li>  </td>
-        <td> <img src="lion.jpg" alt="Lion" width="200"></td>
+        <td> <img src="lion.jpg" alt="Lion" width="250"></td>
       </tr>
    <tr>
 <td><li><b>Tigres</b> – puissants félins d’Asie(d'où l'expression"tié un TIGREEE!"</li>    </td>
-     <td><img src="tigre.jpg" alt="Tigre" width="200">    </td>
+     <td><img src="tigre.jpg" alt="Tigre" width="250">    </td>
    </tr>
       <tr>   
       <td><li><b>Guépards</b> – Le plus rapide de la savanne</li>     </td>
-      <td><img src="guepard.jpg" alt="Tigre" width="200">      </td>
+      <td><img src="guepard.jpg" alt="Tigre" width="250">      </td>
       </tr>
       <tr>    
-      <td> li><b>Lynx</b> – Celui avec les meilleurs yeux(d'où l'expression "T'y a des yeux lynxxxx!"</li>       </td>
-      <td>  <img src="lynx.jpg" alt="Tigre" width="200">   </td>
+      <td> <li><b>Lynx</b> – Celui avec les meilleurs yeux,il chasse la nuit(d'où l'expression "T'y a des yeux lynxxxx!"</li>       </td>
+      <td>  <img src="lynx.jpg" alt="Tigre" width="250">   </td>
       </tr>
  
     
