--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title><u> Contact Zoo </u></title>
+  <title>Contact Zoo </title>
 </head>
 <body>
 <header>
@@ -23,11 +23,11 @@
 
 
 <center><H1>LES CONTACTS     </H1>
-  <u>Adresse:</u>123 Chemin des Poissons, 20167 Villanova, Corse <br>
+ <H1> <u>Adresse:</u>123 Chemin des Poissons, 20167 Villanova, Corse <br>
   <u>Téléphone:</u>+33 4 95 00 00 00<br>
   <u>Boite mail:</u>aquazoo2a@gmail.com
-
-
+</H1>
+<img src="tel.jpg"/>
 
   </center>
 </body>
