--- a/fauves.html
+++ b/fauves.html
@@ -22,7 +22,7 @@
 </header>
 
 
-  <h1>Nos fauves</h1>
+  <h1>Voici nos fauves</h1>
   <p>Découvrez les rois de la savane et de la jungle :</p>
   <ul><h3>
     <table border=2>
