--- a/tarifs.html
+++ b/tarifs.html
@@ -23,6 +23,7 @@
 
 
   <h1>Nos tarifs</h1>
+  <H4>-50% pour les personnes profitant du tarif résident.</H4>
   <table border="1" cellpadding="10">
     <tr><th>Catégorie</th><th>Tarif</th></tr>
     <tr><td>Adultes</td><td>15 €</td></tr>
@@ -30,6 +31,5 @@
     <tr><td>Étudiants</td><td>10 €</td></tr>
     <tr><td>Groupes (10+ personnes)</td><td>12 €/personne</td></tr>
   </table>
-  <p><a href="index.html">Retour à l'accueil</a></p>
 </body>
 </html>
