--- a/manger.html
+++ b/manger.html
@@ -2,35 +2,180 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Restauration</title>
+  <title>Manger - Aquazoo des Ciel2</title>
+  <style>
+    body {
+      margin:0;
+      font-family: Arial, sans-serif;
+      background-color: #f4faff;
+      color: #333;
+    }
+
+    /* Menu de navigation */
+    header {
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 14px;
+      justify-content: center;
+      background: #0077cc;
+      padding: 12px;
+      margin: 0;
+      flex-wrap: wrap;
+    }
+    nav ul li a {
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      font-size: 16px;
+      padding: 8px 12px;
+      border-radius: 6px;
+      transition: 0.3s;
+    }
+    nav ul li a:hover {
+      background: #005fa3;
+    }
+
+    .container {
+      max-width: 1100px;
+      margin: 30px auto;
+      padding: 0 16px;
+      text-align: center;
+    }
+
+    h1 {
+      color: #0077cc;
+      margin-bottom: 30px;
+    }
+
+    /* Section restauration */
+    .resto-section {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+      margin-bottom: 40px;
+      align-items: flex-start;
+    }
+
+    .resto-card {
+      background-color: white;
+      border-radius: 10px;
+      overflow: hidden;
+      width: 280px;
+      transition: transform 0.3s, box-shadow 0.3s;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+
+    .resto-card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    }
+
+    .resto-card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+    }
+
+    .resto-card h2 {
+      margin: 15px 0 10px 0;
+      font-size: 20px;
+    }
+
+    .resto-card p {
+      padding: 0 15px 15px 15px;
+      color: #555;
+    }
+
+    /* Couleurs fun pour chaque type */
+    .restaurant { border-top: 5px solid #0077cc; }
+    .paillote { border-top: 5px solid #ff9933; }
+    .crepes { border-top: 5px solid #cc3366; }
+    .glaces { border-top: 5px solid #33ccff; }
+
+    /* Lien retour */
+    .back-link {
+      display: inline-block;
+      margin-top: 30px;
+      text-decoration: none;
+      color: #0077cc;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    .back-link:hover {
+      color: #005fa3;
+    }
+
+    @media(max-width: 800px) {
+      .resto-section {
+        flex-direction: column;
+        align-items: center;
+      }
+      .resto-card {
+        width: 90%;
+      }
+    }
+  </style>
 </head>
 <body>
+
 <header>
   <nav>
-    <ul style="list-style:none; display:flex; gap:20px; justify-content:center; background:#0077cc; padding:15px; border-radius:8px;">
-      <li><a href="index.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Accueil</a></li>
-      <li><a href="contact.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Contact</a></li>
-      <li><a href="visiter.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Visiter</a></li>
-      <li><a href="acces.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Accès</a></li>
-      <li><a href="tarifs.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Tarifs</a></li>
-      <li><a href="activites.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Activités</a></li>
-      <li><a href="fauves.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Fauves</a></li>
-      <li><a href="photos.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Photos</a></li>
-      <li><a href="manger.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Manger</a></li>
+    <ul>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="visiter.html">Visiter</a></li>
+      <li><a href="acces.html">Accès</a></li>
+      <li><a href="tarifs.html">Tarifs</a></li>
+      <li><a href="activites.html">Activités</a></li>
+      <li><a href="fauves.html">Fauves</a></li>
+      <li><a href="photos.html">Photos</a></li>
+      <li><a href="manger.html">Manger</a></li>
     </ul>
   </nav>
 </header>
 
+<div class="container">
+  <h1>Nos options de restauration</h1>
 
-  <h1>Se restaurer au zoo</h1>
-  <p>Plusieurs options de restauration sont disponibles :</p>
-  <ul>
-    <li>Restaurant « La Savane »</li>
-    <li>Snack rapide avec sandwichs et boissons</li>
-    <li>Glacier artisanal</li>
-  </ul>
-  <img src="restaurant.jpg" alt="Restaurant du zoo" width="300">
+  <div class="resto-section">
+    <!-- Restaurant simple -->
+    <div class="resto-card restaurant">
+      <img src="restaurant.jpg" alt="Restaurant simple">
+      <h2>Restaurant simple</h2>
+      <p>Repas complets pour toute la famille, plats chauds et boissons inclus.</p>
+    </div>
 
-  <p><a href="index.html">Retour à l'accueil</a></p>
+    <!-- Paillote -->
+    <div class="resto-card paillote">
+      <img src="paillote.jpg" alt="Paillote">
+      <h2>Paillote</h2>
+      <p>Détente au bord de l’eau avec snacks, salades et boissons fraîches.</p>
+    </div>
+
+    <!-- Stand crêpes -->
+    <div class="resto-card crepes">
+      <img src="stand-crepes.jpg" alt="Stand à crêpes">
+      <h2>Stand à crêpes</h2>
+      <p>Crêpes sucrées et gourmandes pour petits et grands, faites sur place.</p>
+    </div>
+
+    <!-- Stand glaces -->
+    <div class="resto-card glaces">
+      <img src="stand-glaces.jpg" alt="Stand à glaces">
+      <h2>Stand à glaces</h2>
+      <p>Glaces artisanales et sorbets pour se rafraîchir lors de la visite.</p>
+    </div>
+  </div>
+
+  <a href="index.html" class="back-link">← Retour à l'accueil</a>
+</div>
+
 </body>
 </html>
