--- a/tarifs.html
+++ b/tarifs.html
@@ -2,34 +2,73 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Tarifs du Zoo</title>
+  <title>Tarifs du Zoo - Aquazoo des Ciel2</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4faff;
+      margin: 0;
+      color: #333;
+    }
+
+    header { position: sticky; top: 0; z-index: 10; }
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      background: #0077cc;
+      padding: 15px;
+      border-radius: 8px;
+      margin: 0;
+      flex-wrap: wrap;
+    }
+    nav ul li a { text-decoration: none; color: white; font-weight: bold; font-size: 18px; padding: 8px 12px; border-radius: 6px; transition: 0.3s; }
+    nav ul li a:hover { background: #005fa3; }
+
+    .container { max-width: 800px; margin: 30px auto; padding: 0 16px; text-align: center; }
+    h1 { color: #0077cc; margin-bottom: 10px; }
+    h4 { margin-bottom: 20px; }
+
+    table { width: 100%; border-collapse: collapse; margin: 0 auto; }
+    th, td { border: 1px solid #0077cc; padding: 10px; text-align: center; }
+    th { background-color: #0077cc; color: white; }
+
+    
+  </style>
 </head>
 <body>
+
 <header>
   <nav>
-    <ul style="list-style:none; display:flex; gap:20px; justify-content:center; background:#0077cc; padding:15px; border-radius:8px;">
-      <li><a href="index.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Accueil</a></li>
-      <li><a href="contact.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Contact</a></li>
-      <li><a href="visiter.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Visiter</a></li>
-      <li><a href="acces.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Accès</a></li>
-      <li><a href="tarifs.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Tarifs</a></li>
-      <li><a href="activites.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Activités</a></li>
-      <li><a href="fauves.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Fauves</a></li>
-      <li><a href="photos.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Photos</a></li>
-      <li><a href="manger.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Manger</a></li>
+    <ul>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="visiter.html">Visiter</a></li>
+      <li><a href="acces.html">Accès</a></li>
+      <li><a href="tarifs.html">Tarifs</a></li>
+      <li><a href="activites.html">Activités</a></li>
+      <li><a href="fauves.html">Fauves</a></li>
+      <li><a href="photos.html">Photos</a></li>
+      <li><a href="manger.html">Manger</a></li>
     </ul>
   </nav>
 </header>
 
-
+<div class="container">
   <h1>Nos tarifs</h1>
-  <H4>-50% pour les personnes profitant du tarif résident.</H4>
-  <table border="1" cellpadding="10">
+  <h4>-50% pour les personnes bénéficiant du tarif résident.</h4>
+
+  <table>
     <tr><th>Catégorie</th><th>Tarif</th></tr>
     <tr><td>Adultes</td><td>15 €</td></tr>
     <tr><td>Enfants (-12 ans)</td><td>8 €</td></tr>
     <tr><td>Étudiants</td><td>10 €</td></tr>
     <tr><td>Groupes (10+ personnes)</td><td>12 €/personne</td></tr>
   </table>
+
+
+</div>
+
 </body>
 </html>
